# grpc-packaged-basic-image-classification

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
asset_bundle/0.1.0/: model.yaml
grpc_model/src/: model_client.py  model_server.py
model_lib/src/: model.py
model_lib/src/weights/: resnet101_weights.pth
