[tool.poetry]
name = "sample-grpc-model"
version = "0.1.0"
description = ""
authors = ["Modzy"]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.34.0"
grpcio-tools = "^1.34.0"
pyyaml = "^5.4.1"
torch = "^1.8.0"
torchvision = "^0.10.0"
opencv-python = "^4.5.1"
lime = "^0.2.0"
waitress = "^2.0.0"
scikit-image = "^0.18.1"
Pillow = "^9.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.0.1"
mypy = "^0.782"
isort = "^5.3.2"
pre-commit = "^2.8.2"
pytest-cov = "^2.10.1"
pytest-grpc = "^0.8.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
